# dc2019q-gloryhost

./: Cargo.toml  FLAG  info.yml  tester
exploit/rust/: Cargo.toml
exploit/rust/src/: main.rs
interaction/: Cargo.toml  Dockerfile  test.sh
interaction/src/: main.rs
service/: Cargo.toml  Dockerfile  Dockerfile.build  build.rs  flag
service/src/: main.rs  welcome.txt  x.c
src/: main.rs  x.c
